Small spacing fix for very small mobile screens

--- a/src/app/components/main/work/skills-summary/skills-summary.component.scss
+++ b/src/app/components/main/work/skills-summary/skills-summary.component.scss
@@ -128,3 +128,9 @@ img {
 
     }
 }
+
+@media screen and (max-width: 450px) {
+    .text {
+        line-height: 16px;
+    }
+}
